--- a/lightingengine.html
+++ b/lightingengine.html
@@ -32,7 +32,7 @@
         <div class="op"></div>
 
         <div class="lt-desc">
-            <p>ONly using white paper, adhesives, and minimal structural items liek wire create a lighting engine that either will function as a task lamp or ambient lighting. Consider different tones and stocks of paper, the mark that adhesives leave or how light shines through the materials chosen.</p>
+            <p>Only using white paper, adhesives, and minimal structural items like wire, create a lighting engine that either will function as a task lamp or ambient lighting. Consider different tones and stocks of paper, the marks that adhesives leave, and how light shines through the chosen materials.</p>
         </div>
 
         <div class="it-on"></div>
@@ -40,7 +40,7 @@
         <div class="it-off"></div>
 
         <div class="intent">
-            <p>I wanted to create a light that would encourage people to customize and interact with its. very often I feel that ambient lighting is jsut meant to be looked at and only gives one feeling or mood. My goal was to be able to have people adjust teh light as they saw fit.</p>
+            <p>Going into the project I wanted to create a light that would encourage people to customize and interact with it. I feel that very often ambient lighting is just meant to be percieved and is only appropriate for one specific feeling or mood. My goal was to be able to have people adjust the light as they saw fit through brightness.</p>
         </div>
 
         <div class="vid"></div>
@@ -48,7 +48,7 @@
         <div class="detail"></div>
 
         <div class="learn">
-            <p>what is the paper saying? is it screaming for help? I think one of the biggest takewayas I got from this project was learning to respect tht qualities, properties, and boundires that materials have.</p>
+            <p>With the constraint of having a set lightbulb (no dimmer), I realized I needed to include different layers into the light in order for there to be different tones and brighnesses. I went with two stock of paper with different transparencies to do this. The outer layer is bristol board which is more opaque and subdues the light while the inner layer is thinner double layered printer paper. <br><br>What is the paper saying? Is it screaming for help? I think one of the biggest takeaways I got from this project was learning to respect the qualities, properties, and boundries that materials have. To create a successful product I think that you have to really understand the materials you're working with whether that be paper in this case, or programs like AdobeCC, or even coding languages. Understanding what different options provide and using their strongest characteristics and not forcing them to do things they aren't meant to allows for the result to have a naturally complete feel.</p>
         </div>
 
         <div class="footer">
