--- a/lightingengine.html
+++ b/lightingengine.html
@@ -43,7 +43,11 @@
             <p>Going into the project I wanted to create a light that would encourage people to customize and interact with it. I feel that very often ambient lighting is just meant to be percieved and is only appropriate for one specific feeling or mood. My goal was to be able to have people adjust the light as they saw fit through brightness.</p>
         </div>
 
-        <div class="vid"></div>
+        <div class="vid">
+            <video width="320px" height="400px" controls>
+                <source src="/Users/midorimonosoff/Desktop/try again/images/lighting/demo vid.mp4" type="video/mp4">
+            </video>
+        </div>
 
         <div class="detail"></div>
 
