--- a/adobesuite.html
+++ b/adobesuite.html
@@ -32,19 +32,28 @@
         <div class="sealsnip"></div>
 
         <div class="dylan">
-            <p>I've dabbled in the CreativeCloud occasionally but this year I really got into learning the programs. From Illustrator to Photoshop, Lightroom, and AfterEffects I've trudged through learning and have come out the other side familiarized with them. I still have a lot of learning to do especilly with nuances and sneakily hidden tricks and shortcuts but the foundation has been laid.</p>
+            <p>I've previously play around in CreativeCloud but this year I really got into learning the programs. 
+                From Illustrator to Photoshop, Lightroom, and AfterEffects I've trudged through learning and have come out the other side familiarized with them. 
+                I still have a lot of learning to do especially with sneakily hidden tricks and shortcuts but the foundation has been laid and I've thoroughly enjoyed the process.</p>
         </div>
 
         <div class="sealwhole"></div>
 
         <div class="poster-text">
-            <p>Hooded seals are an endangered animal that are distinguishable through their brightly colored "hood" that protrudes from their noses. In this poster I used a limited color pallette of only 7 colors, any variance is done simply through stripped pattering. I thought this was pretty cool.</p>
+            <p>Hooded seals are an endangered animal that primarily live in the artic and are distinguishable by their brightly colored "hood" that protrudes from their noses. 
+                In this poster there is a limited color pallette of only 7 colors, any variance is done simply through stripped pattering. 
+                I thought this was pretty cool : ).</p>
         </div>
 
-        <div class="animation-link"></div>
+        <div class="animation-link">
+            <video width="800px" height="400px" controls>
+                <source src="images/hooded seal.mp4" type="video/mp4">
+            </video>
+        </div>
 
         <div class="assignment">
-            <p>A 10 second animation showing hooded seals in their natural habitat and behaviours.</p>
+            <p>In a 10 second animation using the same restriction of 7 colors and patterns, show hooded seals in their natural habitat and behaviours. 
+                Also make all the sounds effects to accompany the animation.</p>
         </div>
 
         <div class="footer">
