--- a/lightingengine.html
+++ b/lightingengine.html
@@ -44,8 +44,8 @@
         </div>
 
         <div class="vid">
-            <video width="320px" height="400px" controls>
-                <source src="/Users/midorimonosoff/Desktop/try again/images/lighting/demo vid.mp4" type="video/mp4">
+            <video width="400px" height="400px" controls>
+                <source src="images/opening.mp4" type="video/mp4">
             </video>
         </div>
 
