--- a/personal.html
+++ b/personal.html
@@ -32,7 +32,11 @@
         <div class="og"></div>
 
         <div class="love">
-            <p>My interest in design grew from my love for art. These are some personal sketches and pieces that I enjoyed making. The mediums I use the most are watercolor and colored pencil but I also like to experiment with other things like pen and ink, acrylic paint, and that sort of thing. There are a couple more things I want to include in here but need to find pictures for first. Also it's kind of weird seeing my work together like this, I use a lot of rich pink, purple, and orange except for the frog haha : )</p>
+            <p>My interest in design grew from my love for art. 
+                These are some personal sketches and pieces that I've enjoyed making. 
+                The mediums I use the most are watercolor and colored pencil but I also like to experiment with other things like pen and ink, acrylic paint, and that sort of thing. 
+                There are a couple more things I want to include in here but need to find pictures for first. 
+                Also it's kind of weird seeing my work together like this, I use a lot of rich pink, purple, and orange except for the frog but I may make a copy of it or something and then watercolor over it just to see what it would look like : )</p>
         </div>
 
         <div class="ahead"></div>
