--- a/perspective.html
+++ b/perspective.html
@@ -42,7 +42,12 @@
         <div class="maybe1"></div>
 
         <div class="maybe2">
-            <p>I feel like design in it's nature is about making life easier for other people. We want to create beautiful things that function well and improve the experiences of consumers whether that me through ease of use, instructional value, or just simply aesthetics. Because of this design is both rewarding and sometimes a bit taxing but I couldn't ask for anymore. It really is such a rewarding process and something i see myself doing for the rest of my life not just career wise but also just in my day to day life.</p>
+            <p>I feel like design in it's nature is about making life easier for other people. 
+                I think that's why I'm more drawn to it that just the fine art I was more familiar with earlier in my life.
+                Designers want to create beautiful things that function well and improve the experiences of consumers whether that be through ease of use, instructional value, or just simply aesthetics. 
+                Because of this design is both rewarding and sometimes a bit taxing. 
+                It's the process of creating but with the intention of other people consuming it.
+                It really is such a rewarding process and something I see myself doing for the rest of my life not just career wise but also just integrating it into my day to day.</p>
         </div>
 
         <div class="maybe3"></div>
@@ -50,7 +55,11 @@
         <div class="maybe4"></div>
 
         <div class="text5">
-            <p>Something that I am working on right now is my process. I think there is a balance in process where I can have enough of a structured linear process that can in most instances guide me in the right direction while still letting me explore possibilities and try things that might not lead to a final result. As a base for this process fundamentals in understanding composition in 2D as well as construction in 3D will allow me to further explore more subtle things. I hope this makes sense. I'm still on my discovery and learning about learning about design journey.</p>
+            <p>Something that I am working on right now is my process. 
+                I believe there is a balance in process. 
+                Somewhere I can have enough of a structured linear process that can in most instances guide me in the right direction while still letting me explore possibilities and try things that might not lead to a final result. 
+                As a base for this process, fundamentals in understanding composition in 2D as well as construction in 3D will allow me to further explore more subtle things and how they can influence feelings, thinking, among other things. 
+                I hope this makes sense. I'm still on my discovery and learning about design journey.</p>
         </div>
 
         <div class="footer">
