--- a/index.html
+++ b/index.html
@@ -32,7 +32,16 @@
         <div class="about">
             <div class="me-photo"></div>
             <div class="mini-text">
-                <p>Hello and welcome! <br /><br /> I'm trying to learn some HTML and CSS and this website is where I'm practicing. I hope it's working. <br /><br />These are some of the projects I've done my past year in CMU's design program as well as some of my own freetime work. I hope you enjoy them. <br /><br />I really need to have some more professional pics, but this is pretty funny for now. <br /><br /> I'm actually going to also make this a "I need help" section. I feel like I should be able to shorten my CSS stuff because a lot of it uses the same grid structure but I can't really figure it, if you know let me know.</p>
+                <p>Hello and welcome! 
+                    <br /><br /> I'm trying to learn some HTML and CSS and this website is where I'm practicing. 
+                    I hope it's working. 
+                    <br /><br />These are some of the projects I've done my past year in CMU's design program as well as some of my own freetime work. 
+                    I hope you enjoy them. 
+                    <br /><br />I really need to have some more professional pics, but this is pretty funny for now. 
+                    <br /><br /> I'm actually going to also make this a "I need help" section. 
+                    I feel like I should be able to shorten my CSS stuff because a lot of it uses the same grid structure but I can't really figure it, if you know let me know.
+                    Also a lot of my picture files are too big and so they're slowing down the loading time and I need to smush them a big in quality I think.
+                </p>
             </div>
         </div>
 
