--- a/about.html
+++ b/about.html
@@ -28,7 +28,9 @@
         </div>
         
         <div class="contact">
-            <p><h4>Contact Me!</h4>Let's get in contact:<br /><br />Resume: link here <br />Email: mmonosof@andrew.cmu.edu<br /> LinkedIn: uhhhhhh idk</p>
+            <p><h4>Contact Me!</h4> 
+                <br/><br><a href="images/Resume.pdf">Resume</a> 
+                <br/><br>Email: mmonosof@andrew.cmu.edu </p>
         </div>
     
         <div class="footer">
@@ -38,7 +40,7 @@
         </div>
 
         <div class="i-said-funny">
-             <h2> 3, 2, 1 ... Interaction!</h3>
+             <h2> Lights, Camera, ... Interaction!</h3>
         </div>
 
         <div class="main-section">
@@ -53,9 +55,12 @@
         <div class="less-serious">
             <div class="interestpic"></div>
                 <div class="interested-in">
-                    <p>In my free time I like to play water polo, bake (good lemon bars : O ), hike, and struggle through leaning code. <br /><br /> Right now I'm trying to get familiar with coding so I can learn about electronic and virtual interactions which is something I have't explore much yet.</p> 
+                    <p>In my free time I like to play water polo, bake (good lemon bars : O ), hike, and struggle through leaning code. 
+                        <br /><br /> Right now I'm trying to get familiar with coding so I can learn about electronic and virtual interactions which is something I have't explore much yet.</p> 
                         <br /><br /><br /><br /><br /><br /><br /><br /> 
-                    <p>This website (especially this page, what is happening with the gridding on here??) isn't perfect yet and I'm okay with it! It's a work in progress!!!</p>
+                    <p>This website, especially this page, (what is happening with the gridding and page size on here?) isn't perfect yet and I'm okay with it! 
+                        It's a work in progress!!! <br/><br/><a href="https://github.com/mmonosoff/website1">link to my github for this website</a>
+                         </p>
                 </div>
             </div>
         </div>
