--- a/semantics.html
+++ b/semantics.html
@@ -31,18 +31,24 @@
 
         <div class="hybrid"></div>
 
-        <div class="lnd">
-            <p>from observing form i learned.</p>
-        </div>
+        <div class="lnd"></div>
 
         <div class="word">
-            <p>This was going to be a lot of perspective practice and exploration that I've done but I realized that I don't have very many pictures of my work let alone ones that are presentable so I'm also going to be talking about my perspective and approach to design here.</p>
+            <p>From this set of exercises I came away with a better understanding of the three main categories of a form (dominant, subdominant, and subordinate).
+                When there is a limitation either because of time or material the first things to be bargained away should be what provides the least/isn't the body or meat of the final product.
+                Essentially build out from the basics. 
+            </p>
         </div>
 
         <div class="hmmm"></div>
 
         <div class="natural">
-            <p>starfish, natural form explorationa and observation. naunces, replication, understanding lmiitations of medium.</p>
+            <p>Starfish, natural form explorationa and observation. Naunces, replication, understanding limtations of medium.
+                <br><br>I started off with clay for the starfish since I'm the most familiar with that of the three mediums we could use (clay, foam, and conservation board).
+                It was a bit challenging to get the details blocked in because the clay has a oil base meaning that it never dried and any bump would leave a mark.
+                While working on the foam starfish I realized that because of the difference in medium, skills, and tools involved the form needed to be simplified.
+                I decided to forgo detailing and raising out many of the nubs because they were not as important to the body and feeling of the form.
+            </p>
         </div>
 
         <div class="foam"></div>
@@ -52,7 +58,13 @@
         <div class="maybe4"></div>
 
         <div class="text5">
-            <p>Something that I am working on right now is my process. I think there is a balance in process where I can have enough of a structured linear process that can in most instances guide me in the right direction while still letting me explore possibilities and try things that might not lead to a final result. As a base for this process fundamentals in understanding composition in 2D as well as construction in 3D will allow me to further explore more subtle things. I hope this makes sense. I'm still on my discovery and learning about learning about design journey.</p>
+            <p>The mouse, or man made object, was a bit harder to capture. 
+                Curves and smooth edges produced by a machine just are much more difficult to replicate by hand. 
+                The hardest one of the two replicas was the paper mouse, creating a cohesive and "solid" form through negative space is probably as difficult as you imagine it to be.
+                In order to capture teh curves I did a lot of measuring but for refinement I essentially just went by hand feel.
+                How close does this structure in my hand feel to the original?
+                Feeling is sometimes, especially in cases like this, just as important if not more important than "knowing".
+            </p>
         </div>
 
         <div class="footer">
