--- a/about.html
+++ b/about.html
@@ -29,8 +29,10 @@
         
         <div class="contact">
             <p><h4>Contact Me!</h4> 
-                <br/><br><a href="images/Resume.pdf">Resume</a> 
-                <br/><br>Email: mmonosof@andrew.cmu.edu </p>
+                <br/><a href="images/Resume.pdf">Resume</a> 
+                <br/>Email: mmonosof@andrew.cmu.edu 
+                <a href="https://www.linkedin.com/in/midori-monosoff-a5191221b/">LinkedIn</a>  not very populated, most experience listed on resume
+            </p>
         </div>
     
         <div class="footer">
