--- a/perspective.html
+++ b/perspective.html
@@ -39,9 +39,9 @@
 
         <div class="hmmm"></div>
 
-        <div class="maybe1"></div>
+        <div class="probs1"></div>
 
-        <div class="maybe2">
+        <div class="probs2">
             <p>I feel like design in it's nature is about making life easier for other people. 
                 I think that's why I'm more drawn to it that just the fine art I was more familiar with earlier in my life.
                 Designers want to create beautiful things that function well and improve the experiences of consumers whether that be through ease of use, instructional value, or just simply aesthetics. 
@@ -50,11 +50,11 @@
                 It really is such a rewarding process and something I see myself doing for the rest of my life not just career wise but also just integrating it into my day to day.</p>
         </div>
 
-        <div class="maybe3"></div>
+        <div class="probs3"></div>
 
-        <div class="maybe4"></div>
+        <div class="probs4"></div>
 
-        <div class="text5">
+        <div class="probs5">
             <p>Something that I am working on right now is my process. 
                 I believe there is a balance in process. 
                 Somewhere I can have enough of a structured linear process that can in most instances guide me in the right direction while still letting me explore possibilities and try things that might not lead to a final result. 
