--- a/semantics.html
+++ b/semantics.html
@@ -40,7 +40,7 @@
             </p>
         </div>
 
-        <div class="hmmm"></div>
+        <div class="clay"></div>
 
         <div class="natural">
             <p>Starfish, natural form explorationa and observation. Naunces, replication, understanding limtations of medium.
