--- a/perspective.html
+++ b/perspective.html
@@ -41,11 +41,10 @@
 
         <div class="probs1"></div>
 
-        <div class="probs2">
-            <p>I feel like design in it's nature is about making life easier for other people. 
-                I think that's why I'm more drawn to it that just the fine art I was more familiar with earlier in my life.
+        <div class="probs">
+            <p>I feel like design is about making life easier for other people. 
+                I think that's why I'm more drawn to it than the fine art I was more familiar with earlier in my life.
                 Designers want to create beautiful things that function well and improve the experiences of consumers whether that be through ease of use, instructional value, or just simply aesthetics. 
-                Because of this design is both rewarding and sometimes a bit taxing. 
                 It's the process of creating but with the intention of other people consuming it.
                 It really is such a rewarding process and something I see myself doing for the rest of my life not just career wise but also just integrating it into my day to day.</p>
         </div>
